Fix alignment of CTA arrows

--- a/styles/components/cta.less
+++ b/styles/components/cta.less
@@ -27,17 +27,17 @@
 
   @media @for-phone-only {
     height: 6vw;
-    top: 9vh;
+    top: 10vh;
     right: 4vh;
   }
   @media @for-tablet-portrait-up {
-    height: 4vw;
-    top: 8vw;
+    height: 3vw;
+    top: 10vw;
     right: 9vw;
   }
   @media @for-tablet-landscape-up {
-    height: 3vw;
-    top: 8vw;
+    height: 2vw;
+    top: 9.5vw;
     right: 9vw;
   }
 }
